--- a/Frontend/tsconfig.node.json
+++ b/Frontend/tsconfig.node.json
@@ -15,7 +15,7 @@
     "noImplicitAny": false,
 
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
