--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,18 +1,38 @@
 {
-  "name": "backend",
-  "module": "index.ts",
-  "type": "module",
+  "name": "express-vercel-starter",
+  "version": "1.0.0",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "build": "tsup app --clean --format cjs,esm --env.NODE_ENV production",
+    "check": "biome check --apply .",
+    "dev": "tsx watch app/index.ts",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "format": "biome format . --write",
+    "lint": "biome lint .",
+    "start": "tsx app/index.ts",
+    "typecheck": "tsc --noEmit",
+    "vercel-build": "tsup app --clean --format cjs --env.NODE_ENV production --env.DEPLOYMENT_ENV vercel --out-dir api"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "cors": "2.8.5",
+    "express": "5.0.1",
+    "helmet": "8.0.0",
+    "jsend": "1.1.0",
+    "pino": "9.4.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.3",
+    "@types/cors": "2.8.17",
+    "@types/express": "5.0.0",
+    "@types/jsend": "1.0.32",
+    "@types/supertest": "6.0.2",
+    "@vitest/coverage-v8": "2.1.2",
+    "@vitest/ui": "2.1.2",
+    "tsup": "8.3.0",
+    "tsx": "4.19.1",
+    "typescript": "5.6.3"
   }
 }
