--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,3 +1,20 @@
+
 {
-	"rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
-}
+	"version": 2,
+	"builds": [
+	  {
+		"src": "app.ts",
+		"use": "@vercel/node"
+	  }
+	],
+	"routes": [
+	  {
+		"src": "/api/(.*)",
+		"dest": "app.ts"
+	  },
+	  {
+		"src": "/(.*)",
+		"dest": "app.ts"
+	  }
+	]
+  }
