--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,19 +2,10 @@
 {
 	"version": 2,
 	"builds": [
-	  {
-		"src": "app.ts",
-		"use": "@vercel/node"
-	  }
+	  { "src": "app/index.ts", "use": "@vercel/node" }
 	],
 	"routes": [
-	  {
-		"src": "/api/(.*)",
-		"dest": "app.ts"
-	  },
-	  {
-		"src": "/(.*)",
-		"dest": "app.ts"
-	  }
+	  { "src": "/api/(.*)", "dest": "/app/index.ts" },
+	  { "src": "/(.*)", "dest": "/app/index.ts" }
 	]
   }
