--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -13,6 +13,7 @@
     "jsx": "preserve",
     "incremental": true,
     "noImplicitAny": false,
+    "useUnknownInCatchVariables": false,
     "plugins": [
       {
         "name": "next"
