Testing NextJS and better-auth

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,15 +17,20 @@
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.45.4",
+    "better-auth": "^0.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "kysely": "^0.27.4",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-image": "^4.1.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
