--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,14 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto= update
+
+#Lo que deben ajustar a sus bases de datos locales
+spring.datasource.url = jdbc:postgresql://localhost:5432/cotizaciones-ce
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+
+#No modifiquen
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
