Feat: Added CORS config, fetch all materiales and frontend fetch

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #Lo que deben ajustar a sus bases de datos locales
 spring.datasource.url = jdbc:postgresql://localhost:5432/cotizaciones-ce
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.username=hans
+spring.datasource.password=252002
 
 
 #No modifiquen
