fix: removed application.properties

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.okta.spring/okta-spring-boot-starter -->
+		<dependency>
+			<groupId>com.okta.spring</groupId>
+			<artifactId>okta-spring-boot-starter</artifactId>
+			<version>3.0.7</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
