--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,7 +31,7 @@
     "next": "14.2.15",
     "pg": "^8.13.0",
     "react": "^18",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.3.0",
     "react-dom": "^18",
     "react-image": "^4.1.0",
     "sonner": "^1.5.0",
