--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-day-picker": "^9.3.0",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-image": "^4.1.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
