--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,11 +27,11 @@
     "date-fns": "^4.1.0",
     "kysely": "^0.27.4",
     "lucide-react": "^0.452.0",
-    "next": "14.2.15",
+    "next": "^15.0.3",
     "pg": "^8.13.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "^9.3.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-image": "^4.1.0",
     "sonner": "^1.5.0",
