--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@react-pdf/renderer": "^4.1.4",
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.59.15",
     "class-variance-authority": "^0.7.0",
