--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,6 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  frontend:
-    build:
-      context: ./Frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./Frontend:/app
-      - /app/node_modules
-    environment:
-      - NEXT_PUBLIC_API_URL=http://backend:8080
-    depends_on:
-      - backend
-
   backend:
     build:
       context: ./Backend
@@ -22,9 +8,26 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/mydatabase
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=postgres
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${DB_NAME}
+      - SPRING_DATASOURCE_USERNAME=${DB_USER}
+      - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+
+      - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI=${AUTH0_ISSUER_URI}
+      - AUTH0_AUDIENCE=${AUTH0_AUDIENCE}
+
+      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_AUTH0_ISSUER-URI=${AUTH0_ISSUER_URI}
+      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_CLIENT-ID=${AUTH0_CLIENT_ID}
+      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_CLIENT-SECRET=${AUTH0_CLIENT_SECRET}
+      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_SCOPE=openid,profile,email
+      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_PROVIDER=auth0
+
+      - WHATSAPP_API_URL=${WHATSAPP_API_URL}
+      - WHATSAPP_API_TOKEN=${WHATSAPP_API_TOKEN}
+
+      - SPRING_JPA_HIBERNATE_DDL-AUTO=update
+      - SPRING_JPA_SHOW-SQL=true
+      - SPRING_JPA_DEFER-DATASOURCE-INITIALIZATION=true
+      - SPRING_SQL_INIT_MODE=always
     depends_on:
       - db
 
@@ -33,9 +36,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=mydatabase
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
