--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,35 @@
 version: "3.8"
 
 services:
-  backend:
+  # Service for pulling pre-built image
+  backend-prod:
+    profiles: ["prod"]
+    image: umibana/cotizaciones-ce:latest
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${DB_NAME}
+      - SPRING_DATASOURCE_USERNAME=${DB_USER}
+      - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+      - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI=${AUTH0_ISSUER_URI}
+      - AUTH0_AUDIENCE=${AUTH0_AUDIENCE}
+      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_AUTH0_ISSUER-URI=${AUTH0_ISSUER_URI}
+      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_CLIENT-ID=${AUTH0_CLIENT_ID}
+      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_CLIENT-SECRET=${AUTH0_CLIENT_SECRET}
+      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_SCOPE=openid,profile,email
+      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_PROVIDER=auth0
+      - WHATSAPP_API_URL=${WHATSAPP_API_URL}
+      - WHATSAPP_API_TOKEN=${WHATSAPP_API_TOKEN}
+      - SPRING_JPA_HIBERNATE_DDL-AUTO=update
+      - SPRING_JPA_SHOW-SQL=true
+      - SPRING_JPA_DEFER-DATASOURCE-INITIALIZATION=true
+      - SPRING_SQL_INIT_MODE=always
+    depends_on:
+      - db
+
+  # Service for local development/building
+  backend-dev:
+    profiles: ["dev"]
     build:
       context: ./Backend
       dockerfile: Dockerfile
@@ -11,19 +39,15 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${DB_NAME}
       - SPRING_DATASOURCE_USERNAME=${DB_USER}
       - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
-
       - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI=${AUTH0_ISSUER_URI}
       - AUTH0_AUDIENCE=${AUTH0_AUDIENCE}
-
       - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_AUTH0_ISSUER-URI=${AUTH0_ISSUER_URI}
       - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_CLIENT-ID=${AUTH0_CLIENT_ID}
       - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_CLIENT-SECRET=${AUTH0_CLIENT_SECRET}
       - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_SCOPE=openid,profile,email
       - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_PROVIDER=auth0
-
       - WHATSAPP_API_URL=${WHATSAPP_API_URL}
       - WHATSAPP_API_TOKEN=${WHATSAPP_API_TOKEN}
-
       - SPRING_JPA_HIBERNATE_DDL-AUTO=update
       - SPRING_JPA_SHOW-SQL=true
       - SPRING_JPA_DEFER-DATASOURCE-INITIALIZATION=true
