--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - SPRING_SQL_INIT_MODE=always
     depends_on:
       - db
+    networks:
+      - app-network
 
   # Service for local development/building
   backend-dev:
@@ -54,6 +56,8 @@ services:
       - SPRING_SQL_INIT_MODE=always
     depends_on:
       - db
+    networks:
+      - app-network
 
   db:
     image: postgres:15-alpine
@@ -65,6 +69,12 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   postgres_data:
