Fix: Agregada API sendgrid en Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_PROVIDER=auth0
       - WHATSAPP_API_URL=${WHATSAPP_API_URL}
       - WHATSAPP_API_TOKEN=${WHATSAPP_API_TOKEN}
+      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
       - SPRING_JPA_HIBERNATE_DDL-AUTO=update
       - SPRING_JPA_SHOW-SQL=true
       - SPRING_JPA_DEFER-DATASOURCE-INITIALIZATION=true
@@ -50,6 +51,7 @@ services:
       - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_AUTH0_PROVIDER=auth0
       - WHATSAPP_API_URL=${WHATSAPP_API_URL}
       - WHATSAPP_API_TOKEN=${WHATSAPP_API_TOKEN}
+      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
       - SPRING_JPA_HIBERNATE_DDL-AUTO=update
       - SPRING_JPA_SHOW-SQL=true
       - SPRING_JPA_DEFER-DATASOURCE-INITIALIZATION=true
