Feat: [SCRUM-28] Implementación de Sendgrid para enviar

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ AUTH0_CLIENT_SECRET=your_client_secret
 # Whatsapp API Configuration
 WHATSAPP_API_URL=your_whatsapp_api_url
 WHATSAPP_API_TOKEN=your_whatsapp_api_token
+
+# SendGrid Configuration
+SENDGRID_API_KEY=your_sendgrid_api_key
+SENDGRID_EMAIL_FROM=your_sendgrid_email_from
