--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - WHATSAPP_API_URL=${WHATSAPP_API_URL}
       - WHATSAPP_API_TOKEN=${WHATSAPP_API_TOKEN}
       - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+      - SENDGRID_EMAIL_FROM=${SENDGRID_EMAIL_FROM}
       - SPRING_JPA_HIBERNATE_DDL-AUTO=update
       - SPRING_JPA_SHOW-SQL=true
       - SPRING_JPA_DEFER-DATASOURCE-INITIALIZATION=true
@@ -52,6 +53,7 @@ services:
       - WHATSAPP_API_URL=${WHATSAPP_API_URL}
       - WHATSAPP_API_TOKEN=${WHATSAPP_API_TOKEN}
       - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+      - SENDGRID_EMAIL_FROM=${SENDGRID_EMAIL_FROM}
       - SPRING_JPA_HIBERNATE_DDL-AUTO=update
       - SPRING_JPA_SHOW-SQL=true
       - SPRING_JPA_DEFER-DATASOURCE-INITIALIZATION=true
