--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,10 +27,12 @@
     "@tanstack/react-query": "^5.59.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.0.0",
+    "install": "^0.13.0",
     "kysely": "^0.27.4",
     "lucide-react": "^0.452.0",
     "next": "^15.0.3",
+    "npm": "^11.0.0",
     "pg": "^8.13.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.9.1",
